--- a/www/index.html
+++ b/www/index.html
@@ -8,13 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="Content-Security-Policy"
         content="default-src * 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *" />
-    <title>Seeren</title>
+    <meta name="description" content="Seeren Training App" />
+    <title>Seeren Training</title>
     <base href="./" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="dist/index.css" />
 </head>
 
-<body class="mdl-color--blue-grey-900">
+<body>
     <app></app>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="dist/index.js"></script>
