Add sticky feature

--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <app></app>
-    <script type="text/javascript" src="cordova.js"></script>
+    <!-- <script type="text/javascript" src="cordova.js"></script> -->
     <script type="text/javascript" src="dist/index.js"></script>
 </body>
 
