--- a/www/index.html
+++ b/www/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" type="text/css" href="dist/index.css" />
 </head>
 
-<body>
+<body class="mdl-color--accent m-0 p-0 overflow-h hyphens">
     <app></app>
-    <!-- <script type="text/javascript" src="cordova.js"></script> -->
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="dist/index.js"></script>
 </body>
 
