--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="Content-Security-Policy"
         content="default-src * 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *" />
-    <meta name="description" content="Seeren Training App" />
-    <title>Seeren Training</title>
+    <meta name="description" content="Apprenez à programmer pour le web avec HTML, JavaScript, Angular, Web-GL, Cordova, PHP, Symfony, SQL, UML, Scrum, WordPress etc. Gratuitement - Programmation Lab : Apprendre à programmer" />
+    <title>Programmation Lab</title>
     <base href="./" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="dist/index.css" />
