--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
     <meta name="description" content="Apprenez à programmer pour le web avec HTML, JavaScript, Angular, Web-GL, Cordova, PHP, Symfony, SQL, UML, Scrum, WordPress etc. Gratuitement - Programmation Lab: Progressez en Programmation en prélevant vos extraits préférés" />
     <title>Programmation Lab</title>
     <base href="./" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
 <body class="mdl-color--accent m-0 p-0 overflow-h hyphens">
-    <app></app>
+   <app></app>
     <script type="text/javascript" src="cordova.js"></script>
 </body>
 
